[tool.poetry]
name = "nonebot-plugin-report"
version = "0.1.0"
description = "Push message to from anywhere to your bot through webhook."
authors = ["syrinka <syrinka@foxmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
