[tool.poetry]
name = "nonebot-plugin-report"
version = "0.1.3"
description = "Push message from anywhere to your bot through webhook."
authors = ["syrinka <syrinka@foxmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/syrinka/nonebot-plugin-report"
repository = "https://github.com/syrinka/nonebot-plugin-report"
keywords = ["nonebot", "nonebot2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
