[tool.poetry]
name = "nonebot-plugin-report"
version = "1.1.2"
description = "Push message from anywhere to your bot through webhook."
authors = ["syrinka <syrinka@foxmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/syrinka/nonebot-plugin-report"
repository = "https://github.com/syrinka/nonebot-plugin-report"
keywords = ["nonebot", "nonebot2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.8.0"
nonebot2 = "^2.0.0rc2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
